--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: robinkun jekyll blog
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   なんてブログだ
-baseurl: "/blog/" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://robinkun.github.io" # the base hostname & protocol for your site
 twitter_username: NeoAdeyo
 github_username:  robinkun
