--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: robinkun jekyll blog
+title: moni
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   なんてブログだ
@@ -7,6 +7,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://robinkun.github.io" # the base hostname & protocol for your site
 twitter_username: NeoAdeyo
 github_username:  robinkun
+keep_files: [js, youtube, game/mygame]
 
 # Build settings
 markdown: kramdown
